force-app/main/default/objects/UTube_Video_Infomation__c/UTube_Video_Infomation__c.object-meta.xml
<CustomObject>
    <label>UTube Video Infomation</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>UTube Video Infomation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UTube Video Infomations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>