force-app/main/default/objects/UTube_Video_Infomation__c/fields/Like_Count__c.field-meta.xml
<CustomField>
    <fullName>Like_Count__c</fullName>
    <label>Like Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>