force-app/main/default/objects/UTube_Video_Infomation__c/fields/Video_ID__c.field-meta.xml
<CustomField>
    <fullName>Video_ID__c</fullName>
    <label>Video ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>